Fix dark mode forced (Maybe)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,20 +31,16 @@
 */
 
 :root {
-  color-scheme: only light;
-  --background: #0a0a0a;
-  --foreground: #ededed;
-
-  /*--background: #ffffff;*/
-  /*--foreground: #171717;*/
+  --background: #ffffff;
+  --foreground: #171717;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+/*@media (prefers-color-scheme: light) {*/
+/*  :root {*/
+/*    --background: #0a0a0a;*/
+/*    --foreground: #ededed;*/
+/*  }*/
+/*}*/
 
 /*html, body {*/
 /*  overflow: hidden;*/
